# blinkenlights-colour

./: .gitignore  README.md
blib-1.1.7/blib/: bmovie-bml-parser.c  breceiver.c
blinkensim-2.7/: ChangeLog  Makefile.in  aclocal.m4  configure  configure.in
blinkensim-2.7/doc/: Makefile.in
blinkensim-2.7/src/: Makefile.in  gfx-aa.c  gfx-directfb.c  main.c
blinkenthemes-0.10/: ChangeLog  Makefile.in  NEWS  aclocal.m4  configure
blinkenthemes-0.10/themes/: Makefile.am  Makefile.in  bnf-144x108.xml  bnf-288x216.xml  bnf-576x432.xml  bnf-640x480.xml  bnf-72x54.xml  bnf-800x600.xml
blinkenthemes-0.10/themes/images/: Makefile.am  Makefile.in
