## Makefile.am for blinkenthemes/themes
## Process this file with automake to produce Makefile.in

SUBDIRS = images

themesdatadir = $(BLIB_THEMEPATH)

themesdata_DATA = \
	bnf-72x54.xml		\
	bnf-144x108.xml		\
	bnf-288x216.xml		\
	bnf-576x432.xml		\
	bnf-640x480.xml		\
	bnf-800x600.xml		\
	\
	gondwana-640x120.xml	\
	\
	hdl-144x108.xml		\
	hdl-320x240.xml		\
	hdl-640x480.xml		\
	hdl-800x600.xml		\
	hdl-1024x768.xml	\
	\
	hdl2-128x96.xml		\
	hdl2-160x120.xml	\
	hdl2-320x240.xml	\
	hdl2-640x480.xml	\
	hdl2-800x600.xml	\
	hdl2-1024x768.xml	\
	\
	leds-166x110.xml

EXTRA_DIST = $(themesdata_DATA)
