## Makefile.am for blinkenthemes/themes/images
## Process this file with automake to produce Makefile.in

imagesdatadir = $(BLIB_THEMEPATH)/images

imagesdata_DATA = \
	bnf-72x54-bg.png	\
	bnf-72x54-ov.png	\
	bnf-144x108-bg.png	\
	bnf-144x108-ov.png	\
	bnf-288x216-bg.png	\
	bnf-288x216-ov.png	\
	bnf-576x432-bg.png	\
	bnf-576x432-ov.png	\
	bnf-640x480-bg.png	\
	bnf-640x480-ov.png	\
	bnf-800x600-bg.png	\
	bnf-800x600-ov.png	\
	\
	hdl-144x108-bg.png	\
	hdl-144x108-ov.png	\
	hdl-320x240-bg.png	\
	hdl-320x240-ov.png	\
	hdl-640x480-bg.png	\
	hdl-640x480-ov.png	\
	hdl-800x600-bg.png	\
	hdl-800x600-ov.png	\
	hdl-1024x768-bg.png	\
	hdl-1024x768-ov.png	\
	\
	hdl2-128x96-bg.png	\
	hdl2-128x96-ov.png	\
	hdl2-160x120-bg.png	\
	hdl2-160x120-ov.png	\
	hdl2-320x240-bg.png	\
	hdl2-320x240-ov.png	\
	hdl2-640x480-bg.png	\
	hdl2-640x480-ov.png	\
	hdl2-800x600-bg.png	\
	hdl2-800x600-ov.png	\
	hdl2-1024x768-bg.png	\
	hdl2-1024x768-ov.png	\
	\
	leds-166x110-bg.png	\
	leds-166x110-ov.png

EXTRA_DIST = $(imagesdata_DATA)
